# chip8-rs

./: .gitattributes  Cargo.toml
.cargo/: config.toml
chip8/: Cargo.toml
chip8-case/: CHIP-8.FCStd  Litio_523450.FCStd
chip8-esp32/: Cargo.toml
chip8-esp32/.cargo/: config.toml
chip8-esp32/src/: main.rs
chip8-pcb/: .gitignore  chip8-pcb.kicad_dru  chip8-pcb.kicad_pcb  chip8-pcb.kicad_pro  chip8-pcb.kicad_sch  chip8-pcb.kicad_sym  chip8-pcb.step  fp-lib-table  sym-lib-table
chip8-pcb/chip8-pcb.pretty/: AZDelivery_Keypad_4x4_Matrix_P2.54mm.kicad_mod  BOOMELE_PH-2P_1x2P_P2.00mm_Horizontal.kicad_mod  MLT-8540.kicad_mod  WaveShare_ESP32-C3-ZERO.kicad_mod
chip8-pcb/models/: 2_42inch_oled_module-sku25742_asm.stp  Waveshare ESP32-C3 Zero.step  mlt-8540.20240607-083232.FCBak  mlt-8540.FCStd  mlt-8540.step
chip8-pcb/plots/: chip8-pcb-B_Cu.gbl  chip8-pcb-B_Mask.gbs  chip8-pcb-B_Paste.gbp  chip8-pcb-B_Silkscreen.gbo  chip8-pcb-Edge_Cuts.gm1  chip8-pcb-F_Cu.gtl  chip8-pcb-F_Mask.gts  chip8-pcb-F_Paste.gtp  chip8-pcb-F_Silkscreen.gto  chip8-pcb-In1_Cu.g2  chip8-pcb-In2_Cu.g3  chip8-pcb-NPTH-drl_map.gbr  chip8-pcb-NPTH.drl  chip8-pcb-PTH-drl_map.gbr  chip8-pcb-PTH.drl
chip8-sdl/: Cargo.toml
chip8-sdl/src/: main.rs
chip8/src/: core.rs  lib.rs  memory.rs  periph.rs
src/: main.rs
