[package]
name = "chip8-esp32"
version = "0.1.0"
authors = ["Pietro Lorefice <pietro@develer.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.17.0", features = ["esp32c3"] }
esp-println = { version = "0.9.0", features = ["esp32c3", "log"] }
log = "0.4.20"
