[package]
name = "chip8-esp32"
version = "0.1.0"
authors = ["Pietro Lorefice <pietro@develer.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
chip8 = { path = "../chip8" }
embedded-graphics = "0.8.1"
esp-alloc = "0.3.0"
esp-backtrace = { version = "0.11.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.17.0", features = ["esp32c3", "embedded-hal-02"] }
esp-println = { version = "0.9.0", features = ["esp32c3", "log"] }
log = "0.4.20"
sh1106 = "0.5.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
