cargo-features = ["per-package-target"]

[package]
name = "chip8-esp32"
version = "0.1.0"
authors = ["Pietro Lorefice <pietro@develer.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
default-target = "riscv32imc-unknown-none-elf"

[dependencies]
chip8 = { path = "../chip8" }
embassy-executor = "0.5.0"
embassy-time = { version = "0.3.0", features = ["generic-queue-8"] }
embedded-graphics = "0.8.1"
esp-alloc = "0.3.0"
esp-backtrace = { version = "0.11.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.17.0", features = [
    "esp32c3",
    "embedded-hal-02",
    "embassy",
    "embassy-time-timg0",
    "embassy-executor-thread",
] }
esp-println = { version = "0.9.0", features = ["esp32c3", "log"] }
esp-riscv-rt = "0.8.0"
log = "0.4.20"
sh1106 = "0.5.0"
